# optifi-client

./: .gitignore  Cargo.toml  README.md
programs/optifi-client/: Cargo.toml
programs/optifi-client/src/: lib.rs
programs/optifi-client/src/client/: mod.rs
programs/optifi-client/tests/: client.rs  mod.rs
src/: client.rs  cranker.rs  lib.rs
tests/: client.rs  cranker.rs
