[package]
name = "optifi-client"
version = "0.2.0"
description = "Interface for OptiFi Program"
edition = "2021"
authors = ["Wayne Kuo <wayne@optifi.app>"]
homepage = "https://www.optifi.app/"
repository = "https://github.com/OptiFi-Team/optifi-cpi"
keywords = [
    "solana",
    "optifi",
    "dex",
    "client",
    "program",
    "crypto",
    "options",
    "trading",
]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "optifi_client"

[features]
default = ["optifi-cpi/cpi"]
devnet = ["optifi-cpi/cpi", "optifi-cpi/devnet"]

[dependencies]
anchor-client = "0.24.2"
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
optifi-cpi = { version = "=0.1.1", optional = true }
rust_decimal = "1.26.1"
serde_json = "1.0.72"
serum_dex = { branch = "master", git = "https://github.com/OptiFi-Team/serum-dex.git", features = [
    "no-entrypoint",
] }
serum-crank = { branch = "master", git = "https://github.com/OptiFi-Team/serum-dex.git", package = "crank" }
shellexpand = "2.1.0"
solana-account-decoder = "1.9.29"
solana-client = "1.9.29"
solana-program = "1.7"
solana-sdk = "1.9.29"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
